# rb1

./: README.md
catkin_ws/src/cultureid_rfid_following/: package.xml
catkin_ws/src/cultureid_rfid_following/config/: feasible_goals_csal_karto.yaml  params_turtlebot.yaml
catkin_ws/src/cultureid_rfid_following/launch/: avanti_follow.launch  (+1 more)
catkin_ws/src/follow_waypoints/: instruction_to_publish_to_movebase.txt
catkin_ws/src/iv-rfid-compass/: CMakeLists.txt
catkin_ws/src/relief-devel/: CMakeLists.txt
catkin_ws/src/relief-rb1-packages/rb1_base_robot/rb1_base_bringup/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/relief-rb1-packages/rb1_base_robot/rb1_base_bringup/config/: laser_filter.yaml  px4_config.yaml  px4_pluginlists.yaml  robotnik_base_hw.yaml  robotnik_base_hw_limits.yaml
catkin_ws/src/relief-rb1-packages/rb1_base_robot/rb1_base_bringup/launch/: hokuyo_ug01.launch  hokuyo_ust.launch  px4.launch  scan_matcher.launch  sick_tim561.launch
catkin_ws/src/relief-rb1-packages/rb1_teleop/: CMakeLists.txt  package.xml
catkin_ws/src/relief-rb1-packages/rb1_teleop/scripts/: rb1_teleop_key
catkin_ws/src/relief-rb1-packages/rb1_teleop/src/: rb1_joy.cpp
catkin_ws/src/relief-rb1-packages/relief_rb1_packages/: package.xml
catkin_ws/src/relief-rb1-packages/robot_local_control_msgs/: CMakeLists.txt
catkin_ws/src/relief-rb1-packages/robot_local_control_msgs/msg/: LocalizationStatus.msg  MissionCommand.msg  RobotStatus.msg
launcher_application_scripts/: kill.sh  map.sh  run.sh
relief-support-files/configuration_files/: rb1_antimicro_conf.gamecontroller.amgp  turtlebot_antimicro_conf.gamecontroller.amgp
relief-support-files/scripts/: kill_reader.sh  run_rb1.sh  run_rb1_reader.sh  run_rb1_rfid_localisation.sh  run_turtlebot.sh  run_turtlebot_reader.sh
src/cultureid_rfid_following/: CMakeLists.txt  README.md
src/cultureid_rfid_following/config/: feasible_goals_corridor.yaml  params_rb1.yaml
src/cultureid_rfid_following/include/: cultureid_rfid_following.h
src/cultureid_rfid_following/msg/: AoAMsg.msg
src/cultureid_rfid_following/results/: mySettings.txt
src/follow_waypoints/saved_path/: pose.csv  waypoints.bag  waypoints_2021_11_03_13:40:30.bag  waypoints_2021_11_03_16:27:42.bag
src/iv-rfid-compass/: package.xml
src/iv-rfid-compass/application_java_001625127C5D/: results_001625127C5D.txt
src/iv-rfid-compass/config/: tags_enumeration.txt
src/iv-rfid-compass/results/: decisions.txt
src/relief-devel/launch/: avanti_live_generated.launch
src/relief-devel/maps/: amth_0.01.yaml  amth_test_0.01.yaml  amth_test_0.05.pgm  beyond4_0.01.pgm  beyond4_0.01.yaml~  csal_10072020_0.01.pgm  csal_20201006_0.01.pgm  csal_20201006_0.01.yaml  csal_2023_03_27_0.01.yaml  csal_atrium_151_tags_0.01.pgm  csal_atrium_176_tags_0.01.pgm  csal_atrium_176_tags_0.01.yaml  csal_atrium_3_0.01.yaml  csal_atrium_demo.yaml~  csal_atrium_demo2_0.01.pgm  csal_atrium_demo_0.01.pgm  csal_gl_2023_rb1_0.01.yaml  temp_thmmy_lib3_0.01.yaml  temp_thmmy_lib4_0.01.pgm  temp_thmmy_lib4_0.01.yaml  temp_thmmy_lib5_0.01.yaml  thmmy_lib_rb1_0.01.pgm  thmmy_lib_rb1_0.01.yaml  vergina2_0.01.pgm  vergina_0.01.pgm  vergina_0.01.yaml  vergina_22_12_06_0.02.pgm  vergina_iv_0.01.yaml
src/relief-pipeline-localisation/configuration_files/: pipeline_csm.yaml
src/relief-rb1-packages/: README.md
src/relief-rb1-packages/libraries/: ros-kinetic-procedures-msgs_1.0.3-0xenial_amd64.deb  ros-kinetic-rcomponent_1.1.0-0xenial_amd64.deb  ros-kinetic-robotnik-base-hw-lib_0.9.5-0xenial_amd64.deb  ros-kinetic-robotnik-base-hw_0.9.5-0xenial_amd64.deb  ros-kinetic-robotnik-docker_1.0.0-0xenial_amd64.deb  ros-kinetic-robotnik-locator_1.0.0-0xenial_amd64.deb  ros-kinetic-robotnik-navigation-msgs_0.0.0-0xenial_amd64.deb
src/relief-rb1-packages/map_nav_manager/: CMakeLists.txt  package.xml
src/relief-rb1-packages/rb1_base_robot/: README.md
src/relief-rb1-packages/rb1_base_robot/rb1_base_controller/: CMakeLists.txt  package.xml
src/relief-rb1-packages/rb1_base_robot/rb1_base_controller/src/: rb1_base_controller.cpp
src/relief-rb1-packages/rb1_base_robot/rb1_base_robot/: CMakeLists.txt  package.xml
src/relief-rb1-packages/rb1_base_robot/rb1_base_robot/scripts/: install.sh
src/relief-rb1-packages/rb1_base_robot/rb1_base_web/: index.html  package.xml
src/relief-rb1-packages/rb1_base_robot/rb1_base_web/srv/: get_controller_options.srv  set_controller_options.srv
src/relief-rb1-packages/relief_rb1_packages/: CMakeLists.txt
src/relief-rb1-packages/robot_local_control_msgs/: package.xml
src/relief-rb1-packages/robot_local_control_msgs/msg/: MissionStatus.msg  Status.msg
src/relief-rfid-antennas-poses-logger/config/: params_turtlebot.yaml
src/relief-rfid-detection/: CMakeLists.txt
src/relief-rfid-detection/application/: results_001625127C5D.txt  speedway_embedded_example.cpp
src/relief-rfid-detection/params/: turtlebot_measurements_filelist.yaml
src/relief-rfid-detection/rfid_localisation/: classes.py  functions_main.py  functions_parser.py  rfid_localisation_main.py  rfid_localisation_node.py
src/relief-rfid-detection/srv/: SetMaxTransVelocity.srv
src/relief-rfid-visualisation/: CMakeLists.txt
src/relief-rfid-visualisation/launch/: avanti_visualisation.launch
src/relief-rfid-visualisation/params/: bookcase_corner_coords.yaml  decrease_height_categories.yaml
src/relief-rfid-visualisation/srv/: ListInventory.srv
src/relief-rfid-visualisation/tag_information/: tag_info.txt
src/tuw_multi_robot/tuw_multi_robot_rviz/: CMakeLists.txt
src/tuw_multi_robot/tuw_voronoi_graph/: CMakeLists.txt
src/waypoint_mapping_plugin/: CMakeLists.txt  package.xml  waypoint_nav_plugin_description.xml
src/waypoint_mapping_plugin/launch/: rviz.launch  waypoint_mapping_plugin.rviz
src/waypoint_mapping_plugin/src/: waypoint_mapping_frame.cpp  waypoint_mapping_frame.h
src/waypoint_navigation_plugin/src/: waypoint_nav_frame.cpp  waypoint_nav_frame.h  waypoint_nav_tool.cpp
src/waypoint_navigation_plugin/ui/: WaypointNavigation.ui
src/yocs_velocity_smoother/src/: velocity_smoother_nodelet.cpp
(+217 files in other folders)
