<?xml version="1.0"?>
<package>
  <name>robot_local_control_msgs</name>
  <version>1.0.3</version>
  <description>The robot_local_control_msgs package</description>

  <maintainer email="mbosch@todo.todo">mbosch</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>procedures_msgs</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  
  <run_depend>procedures_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>robotnik_msgs</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
