<?xml version="1.0"?>
<package>
  <name>rb1_base_controller</name>
  <version>1.0.0</version>
  <description>
      The RB1 Baase Controller controls 2 wheel mobile platforms. It expects 2 VelocityJointInterface type of hardware interfaces.
  </description>

  <maintainer email="info@robotnik.es">Robotnik</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/rb1_base_controller</url> -->

  <author email="info@robotnik.es">Robotnik</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>robotnik_msgs</run_depend>

  <export>
    <controller_interface plugin="${prefix}/rb1_base_controller_plugins.xml"/>
  </export>
</package>
