<package>
  <name>rb1_base_robot</name>
  <version>1.0.0</version>
  <description>RB1 Base Metapackage - Contains the robot controller and navigation / localization related packages.</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rb1_base_robot</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb1_base_robot/issues</url>

  <author email="info@robotnik.es">Robotnik</author>

  <maintainer email="info@robotnik.es">Robotnik</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rb1_base_bringup</run_depend>
  <run_depend>rb1_base_controller</run_depend>
  <run_depend>rb1_base_docking</run_depend>
  <run_depend>rb1_base_web</run_depend>


  <export>
    <metapackage/>
  </export>
</package>

