<?xml version="1.0"?>
<package>
  <name>rb1_base_web</name>
  <version>0.0.1</version>
  <description>A simple web server for the RB1 base robot </description>

  <maintainer email="info@robotnik.es">Robotnik</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/axis_camera</url> -->
  <author email="info@robotnik.es">Robotnik</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>mjpeg_server</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>mavros_msgs</run_depend>

 
  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
